Sprint 8: Добавил время старта, продолжительность, приоритетный список
* Sprint 8: Имплементировал ТЗ

* Sprint 8: Code style errors fix

* Sprint 8: Правки по ревью

* Sprint 8: Небольшие правки по ревью + небольшие правки тестов